--- a/views/help.hbs
+++ b/views/help.hbs
@@ -9,7 +9,7 @@
 <body>
     <div class='main-div'>
         {{>header}}
-    
+    <p>How can i help you ?</p>
     </div>
     {{>footer}}
 </body>
